--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 		<nav class="clearfix">
 			<h2>Omotola's Youth Empowerment Programme</h2>
 			<div class="social">
-				<a href="">
+				<a href="https://www.facebook.com/Realomosexy">
 				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 32 32">
 				<path d="M26.667 0h-21.334c-2.945 0-5.333 2.388-5.333 5.334v21.332c0 2.946 2.387 5.334 5.333 5.334h10.667v-14h-4v-4h4v-3c0-2.761 2.239-5 5-5h5v4h-5c-0.552 0-1 0.448-1 1v3h5.5l-1 4h-4.5v14h6.667c2.945 0 5.333-2.388 5.333-5.334v-21.332c0-2.946-2.387-5.334-5.333-5.334z"></path>
 				</svg>
 				</a>
-				<a href="">
+				<a href="https://twitter.com/Realomosexy">
 				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 32 32">
 				<path d="M32 6.076c-1.177 0.522-2.443 0.875-3.771 1.034 1.355-0.813 2.396-2.099 2.887-3.632-1.269 0.752-2.674 1.299-4.169 1.593-1.198-1.276-2.904-2.073-4.792-2.073-3.626 0-6.565 2.939-6.565 6.565 0 0.515 0.058 1.016 0.17 1.496-5.456-0.274-10.294-2.888-13.532-6.86-0.565 0.97-0.889 2.097-0.889 3.301 0 2.278 1.159 4.287 2.921 5.465-1.076-0.034-2.088-0.329-2.974-0.821-0.001 0.027-0.001 0.055-0.001 0.083 0 3.181 2.263 5.834 5.266 6.437-0.551 0.15-1.131 0.23-1.73 0.23-0.423 0-0.834-0.041-1.235-0.118 0.835 2.608 3.26 4.506 6.133 4.559-2.247 1.761-5.078 2.81-8.154 2.81-0.53 0-1.052-0.031-1.566-0.092 2.905 1.863 6.356 2.95 10.064 2.95 12.076 0 18.679-10.004 18.679-18.68 0-0.285-0.006-0.568-0.019-0.849 1.283-0.926 2.396-2.082 3.276-3.398z"></path>
 				</svg>
 				</a>
-				<a href="">
+				<a href="http://instagram.com/realomosexy/">
 				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 32 32">
 				<path d="M26.688 0h-21.375c-2.922 0-5.313 2.391-5.313 5.313v21.375c0 2.922 2.391 5.313 5.313 5.313h21.375c2.922 0 5.313-2.391 5.313-5.313v-21.375c0-2.922-2.391-5.313-5.313-5.313zM10.244 14h11.513c0.218 0.627 0.337 1.3 0.337 2 0 3.36-2.734 6.094-6.094 6.094s-6.094-2.734-6.094-6.094c0-0.7 0.119-1.373 0.338-2zM28 14.002v11.998c0 1.1-0.9 2-2 2h-20c-1.1 0-2-0.9-2-2v-12h3.128c-0.145 0.644-0.222 1.313-0.222 2 0 5.014 4.079 9.094 9.094 9.094s9.094-4.079 9.094-9.094c0-0.687-0.077-1.356-0.222-2l3.128 0.002zM28 7c0 0.55-0.45 1-1 1h-2c-0.55 0-1-0.45-1-1v-2c0-0.55 0.45-1 1-1h2c0.55 0 1 0.45 1 1v2z"></path>
 				</svg>
 				</a>
 			</div>
 			<ul>
-				<li><a href="">Home</a></li>
-				<li><a href="">About</a></li>
-				<li><a href="">Mission</a></li>
-				<li><a href="">Project</a></li>
+				<li><a href="./">Home</a></li>
+				<li><a href="about">About</a></li>
+				<li><a href="mission">Mission</a></li>
+				<li><a href="project">Project</a></li>
 			</ul>
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
 			<path d="M2 6h28v6h-28zM2 14h28v6h-28zM2 22h28v6h-28z" fill="#FFFFFF"></path>
@@ -53,10 +53,10 @@
 		</nav>
 		<a href=""><h1 class="logo">Oyep</h1></a>
 		<ul class="rslides">
-			<li><img src="images/gallery/1.jpg" alt="oyep image"></li>
-			<li><img src="images/gallery/2.jpg" alt="oyep image"></li>
-			<li><img src="images/gallery/3.jpg" alt="oyep image"></li>
-			<li><img src="images/gallery/4.jpg" alt="oyep image"></li>
+			<li><img src="images/slides/1.jpg" alt="oyep image"></li>
+			<li><img src="images/slides/2.jpg" alt="oyep image"></li>
+			<li><img src="images/slides/3.jpg" alt="oyep image"></li>
+			<li><img src="images/slides/4.jpg" alt="oyep image"></li>
 		</ul>
 	</header>
 	<section>
@@ -85,12 +85,24 @@
 			<li><img src="images/xmas-table.jpg" alt="Xmas celebration"></li>
 		</ul> -->
 		<div class="owl-carousel">
-			<div><img src="images/omosexy-galg.jpg" alt="Omosexy at GALG"></div>
-			<div><img src="images/omosexy-galg.jpg" alt="Omosexy at GALG"></div>
-			<div><img src="images/omosexy-galg.jpg" alt="Omosexy at GALG"></div>
-			<div><img src="images/omosexy-galg.jpg" alt="Omosexy at GALG"></div>
-			<div><img src="images/omosexy-galg.jpg" alt="Omosexy at GALG"></div>
-			<div><img src="images/omosexy-galg.jpg" alt="Omosexy at GALG"></div>
+			<div>
+				<a href="images/gallery/portrait/omosexy-galg.jpg" data-lightbox="GalgParty" data-title="Galg Party"><img src="images/gallery/portrait/omosexy-galg.jpg" alt="Omosexy at GALG"></a>
+			</div>
+			<div>
+				<a href="images/gallery/portrait/captain-n-omot.jpg" data-lightbox="GalgParty" data-title="Galg Party"><img src="images/gallery/portrait/captain-n-omot.jpg" alt="Captain and Omo T"></a>
+			</div>
+			<div>
+				<a href="images/gallery/portrait/model1.jpg" data-lightbox="GalgParty" data-title="Galg Party"><img src="images/gallery/portrait/model1.jpg" alt="Christmas event"></a>
+			</div>
+			<div>
+				<a href="images/gallery/portrait/model2.jpg" data-lightbox="GalgParty" data-title="Galg Party"><img src="images/gallery/portrait/model2.jpg" alt="Christmas event"></a>
+			</div>
+			<div>
+				<a href="images/gallery/portrait/dance-steps.jpg" data-lightbox="GalgParty" data-title="Galg Party"><img src="images/gallery/portrait/dance-steps.jpg" alt="Christmas event"></a>
+			</div>
+			<div>
+				<a href="images/gallery/portrait/joined1.jpg" data-lightbox="GalgParty" data-title="Galg Party"><img src="images/gallery/portrait/joined1.jpg" alt="Christmas event"></a>
+			</div>
 		</div>
 	</section>
 	<footer>
